...
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/background_dark"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="291dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="Search"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:text="Search"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/song_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_dark" />

    </LinearLayout>

...
