...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/num_songs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>
...
                    android:layout_height="wrap_content"
                    android:text="@string/user_songs"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="17sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selectedSongs"
                    android:layout_width="match_parent"
                    android:layout_height="109dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/hint_white"/>
            </LinearLayout>

            <Button
                android:id="@+id/add_songs"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/purple_grad_ovel"

                android:fontFamily="sans-serif-medium"
                android:text="Add Songs"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/save_profile"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/purple_grad_ovel"
...
